--- a/esittelysivu.html
+++ b/esittelysivu.html
@@ -13,7 +13,7 @@
     <p>Yleisiä linkkejä</p>
     <ul>
       <li><a href="https://github.com/Possu/Tsoha">Työn repositorio</a></li>
-      <li><a href="https://github.com/GITHUBTUNNUS/REPOSITORIO/blob/master/doc/dokumentaatio.pdf?raw=true">Työn dokumentaatio</a></li>
+      <li><a href="https://github.com/Possu/Tsoha/blob/master/docs/dokumentaatio.pdf=true">Työn dokumentaatio</a></li>
 
       <!-- Viikolla 2 voit laittaa kommentoidut linkitkin sivuille. 
            Ota kommenttimerkit pois sen kielen ympäriltä, jota käytät -->
