--- a/esittelysivu.html
+++ b/esittelysivu.html
@@ -14,10 +14,10 @@
     <ul>
       <li><a href="https://github.com/Possu/Tsoha">Työn repositorio</a></li>
       <li><a href="https://github.com/Possu/Tsoha/blob/master/docs/dokumentaatio.pdf?raw=true">Työn dokumentaatio</a></li>
-<li><a href="joqpaavo.users.cs.helsinki.fi/index.php">PHP testisivu</a></li>
-<li><a href="joqpaavo.users.cs.helsinki.fi/yhteystesti.php">Connection test</a></li>
-<li><a href="joqpaavo.users.cs.helsinki.fi/html-demo/index.html">HTML testisivu</a></li>
-<li><a href="joqpaavo.users.cs.helsinki.fi/listaustesti.php">Listaustesti</a></li>
+<li><a href="http://joqpaavo.users.cs.helsinki.fi/index.php">PHP testisivu</a></li>
+<li><a href="http://joqpaavo.users.cs.helsinki.fi/yhteystesti.php">Connection test</a></li>
+<li><a href="http://joqpaavo.users.cs.helsinki.fi/html-demo/index.html">HTML testisivu</a></li>
+<li><a href="http://joqpaavo.users.cs.helsinki.fi/listaustesti.php">Listaustesti</a></li>
 
       <!-- Viikolla 2 voit laittaa kommentoidut linkitkin sivuille. 
            Ota kommenttimerkit pois sen kielen ympäriltä, jota käytät -->
